--- a/Calculadora/src/br/edu/ifro/Calculadora.fxml
+++ b/Calculadora/src/br/edu/ifro/Calculadora.fxml
@@ -10,39 +10,39 @@
 
 <AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.CalculadoraController">
    <children>
-      <Label layoutX="30.0" layoutY="30.0" text="Numero 01:*">
+      <Label layoutX="20.0" layoutY="30.0" text="Numero 01:*">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="250.0" layoutY="30.0" text="Numero 02:*">
+      <Label layoutX="310.0" layoutY="30.0" text="Numero 02:*">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtnum01" layoutX="30.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
+      <TextField fx:id="txtnum01" layoutX="20.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="txtnum02" layoutX="250.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
+      <TextField fx:id="txtnum02" layoutX="310.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <Label layoutX="170.0" layoutY="30.0" text="Sinal">
+      <Label layoutX="135.0" layoutY="30.0" text="Operaçao:*">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="370.0" layoutY="55.0" text="=">
+      <Label layoutX="410.0" layoutY="55.0" text="=">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="txtresultado" editable="false" layoutX="400.0" layoutY="60.0" prefHeight="50.0" prefWidth="150.0">
+      <TextField fx:id="txtresultado" editable="false" layoutX="430.0" layoutY="60.0" prefHeight="50.0" prefWidth="150.0">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <Label layoutX="400.0" layoutY="30.0" text="Resultado:">
+      <Label layoutX="430.0" layoutY="30.0" text="Resultado:">
          <font>
             <Font size="18.0" />
          </font>
@@ -51,10 +51,9 @@
          <font>
             <Font size="18.0" />
          </font></Button>
-      <ComboBox fx:id="cboxop" layoutX="140.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0" style="-fx-font-size: 18;">
+      <ComboBox fx:id="cboxop" layoutX="135.0" layoutY="60.0" prefHeight="50.0" prefWidth="165.0" style="-fx-font-size: 18;">
       <items>
         <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Operação" />
           <String fx:value="+" />
           <String fx:value="-" />
           <String fx:value="*" />
