--- a/Calculadora/src/br/edu/ifro/Calculadora.fxml
+++ b/Calculadora/src/br/edu/ifro/Calculadora.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.geometry.*?>
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -8,68 +11,107 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.collections.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.CalculadoraController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.CalculadoraController">
    <children>
-      <Label layoutX="20.0" layoutY="30.0" text="Numero 01:*">
+      <TreeView layoutX="27.0" layoutY="89.0" prefHeight="501.0" prefWidth="337.0" />
+      <MenuBar prefHeight="29.0" prefWidth="400.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Ferramentas">
+            <items>
+                  <MenuItem fx:id="historico" mnemonicParsing="false" onAction="#historico" text="Historico" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Ajuda">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Sobre" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <Label layoutX="82.0" layoutY="40.0" text="CALCULADORA">
          <font>
-            <Font size="18.0" />
+            <Font size="30.0" />
          </font>
       </Label>
-      <Label layoutX="310.0" layoutY="30.0" text="Numero 02:*">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtnum01" layoutX="20.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
-         <font>
-            <Font size="18.0" />
-         </font></TextField>
-      <TextField fx:id="txtnum02" layoutX="310.0" layoutY="60.0" prefHeight="50.0" prefWidth="100.0">
-         <font>
-            <Font size="18.0" />
-         </font></TextField>
-      <Label layoutX="135.0" layoutY="30.0" text="Operaçao:*">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="410.0" layoutY="55.0" text="=">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtresultado" editable="false" layoutX="430.0" layoutY="60.0" prefHeight="50.0" prefWidth="150.0">
-         <font>
-            <Font size="18.0" />
-         </font></TextField>
-      <Label layoutX="430.0" layoutY="30.0" text="Resultado:">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="botsoma" layoutX="80.0" layoutY="120.0" mnemonicParsing="false" onAction="#soma" prefHeight="60.0" prefWidth="120.0" text="Operação">
-         <font>
-            <Font size="18.0" />
-         </font></Button>
-      <ComboBox fx:id="cboxop" layoutX="135.0" layoutY="60.0" prefHeight="50.0" prefWidth="165.0" style="-fx-font-size: 18;">
-      <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="+" />
-          <String fx:value="-" />
-          <String fx:value="*" />
-          <String fx:value="/" />
-        </FXCollections>
-      </items>
-  </ComboBox>
-      <Button fx:id="botlimpa" layoutX="240.0" layoutY="120.0" mnemonicParsing="false" onAction="#limpa" prefHeight="60.0" prefWidth="120.0" text="Limpar">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="botcancela" layoutX="400.0" layoutY="120.0" mnemonicParsing="false" onAction="#cancela" prefHeight="60.0" prefWidth="120.0" text="Cancelar">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
+      <VBox alignment="TOP_CENTER" layoutX="45.0" layoutY="98.0" prefHeight="480.0" prefWidth="300.0">
+         <children>
+            <Label text="Digite um Número:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Pane prefHeight="15.0" prefWidth="282.0" />
+            <TextField fx:id="txtnum01" prefHeight="40.0" prefWidth="270.0" promptText="10">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
+            <Pane prefHeight="26.0" prefWidth="282.0" />
+            <Label text="Escolha outro número:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Pane prefHeight="15.0" prefWidth="282.0" />
+            <TextField fx:id="txtnum02" prefHeight="43.0" prefWidth="252.0" promptText="10">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
+            <Pane prefHeight="26.0" prefWidth="282.0" />
+            <Label text="Escolha uma operação:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Pane prefHeight="15.0" prefWidth="282.0" />
+            <ComboBox fx:id="cboxop" prefHeight="33.0" prefWidth="300.0" promptText="Operação" style="-fx-font-size: 18;">
+            <items>
+              <FXCollections fx:factory="observableArrayList">
+                <String fx:value="Soma" />
+                <String fx:value="Subtração" />
+                <String fx:value="Multiplicação" />
+                <String fx:value="Divisão" />
+              </FXCollections>
+            </items>
+        </ComboBox>
+            <Pane prefHeight="26.0" prefWidth="282.0" />
+            <Button fx:id="botsoma" mnemonicParsing="false" onAction="#soma" prefHeight="50.0" prefWidth="130.0" text="Calcular">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Pane prefHeight="26.0" prefWidth="282.0" />
+            <TextField fx:id="txtresultado" editable="false" prefHeight="40.0" prefWidth="270.0" promptText="0">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
+            <Pane prefHeight="15.0" prefWidth="282.0" />
+            <Label text="Resultado:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" prefHeight="68.0" prefWidth="298.0">
+               <children>
+                  <Button fx:id="botcancela" mnemonicParsing="false" onAction="#cancela" prefHeight="50.0" prefWidth="130.0" text="Cancelar">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Pane prefHeight="97.0" prefWidth="30.0" />
+                  <Button fx:id="botlimpa" mnemonicParsing="false" onAction="#limpa" prefHeight="50.0" prefWidth="130.0" text="Limpar" textAlignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
    </children>
 </AnchorPane>
