--- a/Calculadora/src/br/edu/ifro/Login.fxml
+++ b/Calculadora/src/br/edu/ifro/Login.fxml
@@ -23,7 +23,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="72.0" layoutY="162.0" text="Realize o login">
+      <Label layoutX="72.0" layoutY="162.0" text="Realize o login (root /root)">
          <font>
             <Font size="20.0" />
          </font>
